# PWDFT

./: .gitignore  BlasBuildMac  HowToBuildInstall  Plane-Wave-Density-Functional-Theory.md  README.md  index.md
Nwpw/: CMakeLists.txt  NwpwConfig.h.in  Plane-Wave-Density-Functional-Theory.html  nwpw.cpp  nwpw.hpp
Nwpw/BAND/: band.md
Nwpw/band/: CMakeLists.txt
Nwpw/band/cpsd/: band_cpsd.cpp  band_inner_loop.cpp  band_inner_loop.hpp
Nwpw/band/minimizer/: band_bomd.cpp  band_cgsd.hpp  band_cgsd_bfgsminimize.cpp  band_cgsd_bybminimize2.cpp  band_cgsd_cgksminimize.cpp  band_cgsd_cgminimize.cpp  band_cgsd_energy.cpp  band_cgsd_energy.hpp  band_cgsd_excited.cpp  band_cgsd_excited.hpp  band_geovib.cpp  band_minimizer.cpp
Nwpw/cmake/Modules/: FindMKL.cmake
Nwpw/file/: CMakeLists.txt
Nwpw/file/file_generate/: CMakeLists.txt  file_generate.cpp
Nwpw/libraryps/pspw_default/: Cu.nosemi
Nwpw/nwpwlib/: CMakeLists.txt
Nwpw/nwpwlib/C3dB/: CBalance.cpp  CBalance.hpp  CGrid.cpp  CGrid.cpp.bak  CGrid.hpp  CGrid.hpp.bak  CStrfac.cpp  CStrfac.hpp  Cneb.cpp  Cneb.hpp  Mapping1k.cpp  Mapping1k.hpp  Mapping3c.cpp  Mapping3c.hpp  c1db.cpp  c1db.hpp  c3db.cpp  c3db.hpp  k1db.cpp  k1db.hpp
Nwpw/nwpwlib/Control/: Control2.cpp  Control2.hpp  Int64.h  control.cpp  control.cpp.old  control.hpp  control.hpp.old  hdbm.c  json.hpp  parsestring.hpp  rtdb.cpp  rtdb.hpp  rtdb_seq.c  rtdb_seq.h
Nwpw/nwpwlib/D3dB/: Makefile  Mapping1.cpp  Mapping1.hpp  Mapping3.cpp  Mapping3.hpp  Pneb.cpp  Pneb.hpp  Pneb.hpp.bad_sycl  d1db.cpp  d1db.hpp  d3db.cpp  d3db.cpp.bad  d3db.hpp  d3db.hpp.bad_sycl  hcurve.cpp  hilbert.cpp  hilbert.hpp  olist.hpp
Nwpw/nwpwlib/Parallel/: Parallel.cpp  Parallel.hpp  parallel_fortran.cpp
Nwpw/nwpwlib/aimd_analysis/: nwpw_aimd_running_data.cpp  nwpw_aimd_running_data.hpp
Nwpw/nwpwlib/apc/: nwpw_apc.cpp  nwpw_apc.hpp  nwpw_born.cpp  nwpw_born.hpp  nwpw_cosmo.hpp
Nwpw/nwpwlib/blas/: blas.h  eigen.f  tqli.f  tred2.f  xerbla.f
Nwpw/nwpwlib/brillouin/: Brillouin.cpp  Brillouin.hpp
Nwpw/nwpwlib/device/: CMakeLists.txt  cusolver_utils.h  device.cpp  device.hpp  device_types.hpp  gdevice.cpp  gdevice.cpp.bad_sycl  gdevice.hpp  gdevice2.cpp  gdevice2.hpp  gdevices.hpp  gdevices_cuda.hpp  gdevices_cuda0.hpp  gdevices_hip.hpp  gdevices_opencl.hpp  gdevices_sycl.hpp  gdevices_sycl_bad.hpp  macros.hpp  nonlocal.cl  tn3matmul0.cl  tn3matmul2.cl
Nwpw/nwpwlib/dipole/: nwpw_dipole.cpp  nwpw_dipole.hpp
Nwpw/nwpwlib/dplot/: nwpw_density_plot.cpp  nwpw_density_plot.hpp  nwpw_dplot.cpp  nwpw_dplot.hpp  stb_impl.cpp
Nwpw/nwpwlib/efield/: nwpw_efield.cpp  nwpw_efield.hpp
Nwpw/nwpwlib/fextra/: skew.f
Nwpw/nwpwlib/fftpack/: cosqb.f  cosqf.f  cosqf1.f  cosqi.f  cost.f  dcffti.f  dcftf1.f  dcfti1.f  dpssb3.f  dpssb5.f  dpssf.f  dpssf2.f  dpssf5.f  dradb4.f  dradbg.f  dradf2.f  dradf3.f  dradf4.f  dradfg.f  drfftb.f  drfftf.f  drffti.f  drftf1.f  drfti1.f  fft.h  rffti.f  rffti1.f
Nwpw/nwpwlib/io/: Makefile  compressed_io.c  compressed_io.cpp  compressed_io.h  compressed_io.hpp
Nwpw/nwpwlib/ion/: Ewald.cpp  Ewald.hpp  Ion.cpp  Ion.hpp  Makefile  ion_angle.cpp  ion_angle.hpp  ion_bond.cpp  ion_bond.hpp  ion_bondings.cpp  ion_bondings.hpp  ion_cbond.cpp  ion_cbond.hpp  ion_ion.cpp  ion_ion.hpp  ion_rcovalent.cpp  ion_rcovalent.hpp  phase_classify_minimal.hpp
Nwpw/nwpwlib/lapack/: Makefile
Nwpw/nwpwlib/lattice/: Balance.cpp  Balance.cpp.bad  Balance.hpp  Lattice.cpp  Lattice.hpp  PGrid.cpp  PGrid.cpp.bad  PGrid.cpp.bad_sycl  PGrid.hpp  PGrid.hpp.bad  PGrid.hpp.bad_sycl  Phafac.cpp  Strfac.cpp  Strfac.hpp  lattice.cpp  lattice.cpp.old
Nwpw/nwpwlib/nwpwxc/: nwpwxc_vdw3a.F  nwpwxc_vdw3c.F
Nwpw/nwpwlib/parse/: apply_kpoint_symmetry_pruning.cpp  apply_kpoint_symmetry_pruning.hpp  parse_pwdft.cpp  parse_pwdft.hpp  resolve_symmetry_and_cell.cpp  resolve_symmetry_and_cell.cpp.junk  resolve_symmetry_and_cell.hpp
Nwpw/nwpwlib/paw_utilities/: Paw_compcharge.cpp  Paw_compcharge.hpp  Paw_gaunt.cpp  Paw_gaunt.hpp  Paw_gintegrals.cpp  Paw_gintegrals.hpp  Paw_xc.cpp  Paw_xc.hpp  util_wgaussian.cpp  util_wgaussian.hpp
Nwpw/nwpwlib/pseudopotential/: atom.c  atom.h  becke_exchange.c  becke_exchange.h  carter_parse.c  cpi_parse.c  debug.c  dependencies  dft.c  dft.h  dirac.c  dirac.h  dirac_exchange.c  dirac_exchange.h  gaussj.c  gaussj.h  generate_rho_semicore.c  generate_rho_semicore.h  get_word.c  get_word.h  grids.c  grids.h  hamann.c  hamann.h  hartree.c  hartree.h  hgh_parse.c  integrate.c  integrate.c.junk  loggrid.c  loggrid.h  lyp_correlation.c  lyp_correlation.h  name.c  name.h  pauli.c  pauli.h  pbe_correlation.c  pbe_correlation.h  pbe_exchange.c  (+47 more)
Nwpw/nwpwlib/psp_library/: CMakeLists.txt  NwpwLibrarypsConfig.hpp  Psp1d_Hamann.cpp  Psp1d_Hamann.cpp.bak  Psp1d_Hamann.hpp  Psp1d_pawppv1.cpp  Psp1d_pawppv1.hpp  psp_file_check.cpp  psp_file_check.hpp  psp_library.cpp  psp_library.hpp
Nwpw/nwpwlib/qmmm/: nwpw_qmmm.hpp
Nwpw/nwpwlib/rtdbjunk/: hdbm.c  hdbm.h  misc.h  rtdb.cpp  rtdb.hpp  rtdb_seq.c  rtdb_seq.h
Nwpw/nwpwlib/symmetry/: Cn.py  Cnh.py  Cnv.py  Dn.py  Dnd.py  Dnh.py  PointGroupCharacterTables.cpp  PointGroupCharacterTables.hpp  PointGroupGenerators.cpp  PointGroupGenerators.hpp  SpaceGroupDB.cpp  SpaceGroupDB.hpp  Symmetry.cpp  Symmetry.hpp  TThOTdOh.py  autospace.cpp  autospace.hpp  parse.py  spacegroups.names  symmetry_elements.cpp  symmetry_elements.hpp
Nwpw/nwpwlib/thermostats/: nwpw_Nose_Hoover.cpp  nwpw_Nose_Hoover.hpp
Nwpw/nwpwlib/utilities/: Makefile  eckart_projector.cpp  eckart_projector.hpp  iofmt.hpp  nwpw_ckerker.hpp  nwpw_cscf_mixing.hpp  nwpw_kerker.hpp  nwpw_lmbfgs.hpp  nwpw_scf_mixing.hpp  nwpw_timers.hpp  nwpw_timing.cpp  nwpw_timing.hpp  units.hpp  util.cpp  util.cpp.bad  util.hpp  util.hpp.bad  util_ascii_plot.hpp  util_cell.cpp  util_cell.hpp  util_date.cpp  util_date.hpp  util_gamma.cpp  util_gamma.hpp  util_gaunt.cpp  util_gaunt.hpp  util_legendre.cpp  util_legendre.hpp  util_linesearch.cpp  util_linesearch.hpp  util_log_integrate.cpp  util_log_integrate.hpp  util_paths.cpp  util_paths.hpp  util_radial_switching.cpp  (+8 more)
Nwpw/pspw/: CMakeLists.txt
(+901 files in other folders)
